upcomming release
Fixed: Fob damage and tweaked base damage for titan ammo

**1.07**
Added: Delay before statics can rearm from ammo fac (60 sec)
Added: Base repair (After factory dies you have 10 min to repair)
Tweaked: Economy (Smaller towns will get higher pay per cycle, dropped rewards down by 15%)
Tweaked: AI view distance is synced to max player distance
Tweaked: Base AT statics skill adjusted
Tweaked: Nuke performance tweaks
Tweaked: Base damage will now be more accurate, AF is still pos.
Tweaked: rpg42 ammo tier
Tweaked: LF rhs med trucks with vanilla (to prevent respawn bug)
Tweaked: Mk19/AGS30 to BD1
Tweaked: Stinger/Djigit to BD2
Tweaked: AA Defense to BD3
Tweaked: D30 to BD2
Removed: AT statics from repair truck
Removed: Mortars from base defense
Removed: KORD/Kornet

**1.06.9**
Fixed: On teamswap player wont loose original gear hopefully
Tweaked: View distance for statics been added, they seem to work better now
Tweaked: Increase AT static cost/raise tier
Tweaked: Decrease Mortar static cost
Tweaked: Increase base defense 3 SV cost
Tweaked: Move AT static packs to G4
Tweaked: Base damage temporary fix

**1.06.8**
Tweaked: Increase blufor AF apache costs/lower opfor AF heli costs
Tweaked: Increase cost of LF spam units (Marid/M117/Marshal)
Tweaked: Reduced t80ue1 cost/raised m1a1sa(tusk1) cost
Added: Rpg-42 ammo for gear1
Removed: Patriot and Radar from base defenses
Removed: Base defense 4 upgrade
Tweaked: Centered Base markers and detection markers
Tweaked: Increased base range to 300m
Tweaked: Gear selling tax is now lower, you will now get 60% back
Tweaked: Safe respawn dropped from 75m to 40m

**1.06.7**
Added: ka52 at af4 for opfor
Added: Emr 7.62 ammo to gear menu
Added: RPG-42 to OPFOR gear 1
Replaced: Gaz-233114 with brdm models (res doesn't engage correctly)
Replaced: Rg-33 unarmed with rg-33 m2
Replaced: Rhs fixed wing w vanilla assets
Replaced: Name tags with Vanilla
Tweaked: Lower price of AF4/5 assets
Tweaked: Base/repair menu mortar cost